commit int012 completed

--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-1/int01-1-1/int01-1-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-1/int01-1-1/int01-1-1.component.html
@@ -1,7 +1,7 @@
 <app-breadcrumb [route]="breadcrumb"></app-breadcrumb>
 <div class="ui grid">
     <div class="sixteen wide column">
-        <div class="ui top text-center attached header">
+        <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
             <h3>ตรวจสอบใบเสร็จรับเงินภาษีสรรพสามิต</h3>
         </div>
         <div class="ui bottom attached segment">
@@ -47,8 +47,8 @@
                                 <div class="ui calendar full-width" id="calendar1">
                                     <div class="ui input left icon">
                                         <i class="calendar alternate icon"></i>
-                                        <input type="text" placeholder="วัน/เดือน/ปี" name="startDate" id="startDate" autocomplete="off"
-                                            ngModel required>
+                                        <input type="text" placeholder="วัน/เดือน/ปี" name="startDate" id="startDate"
+                                            autocomplete="off" ngModel required>
                                     </div>
                                 </div>
                             </div>
@@ -59,8 +59,8 @@
                                 <div class="ui calendar full-width" id="calendar2">
                                     <div class="ui input left icon">
                                         <i class="calendar alternate icon"></i>
-                                        <input type="text" placeholder="วัน/เดือน/ปี" name="endDate" id="endDate" autocomplete="off"
-                                            ngModel required>
+                                        <input type="text" placeholder="วัน/เดือน/ปี" name="endDate" id="endDate"
+                                            autocomplete="off" ngModel required>
                                     </div>
                                 </div>
                             </div>
