--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-2/int01-2-2/int01-2-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-2/int01-2-2/int01-2-2.component.html
@@ -2,7 +2,7 @@
     <div class="sixteen wide column">
 
 
-        <div class="ui top attached header">
+        <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
             <span>เพิ่มเลขแบบพิมพ์</span>
         </div>
 
@@ -76,11 +76,11 @@
                             <i class="print icon"></i>
                             Export
                         </a>
-                        <a class="ui mini primary button widtd-100" (click)="saveAllData()">
+                        <a id="btnSave" class="ui mini primary button widtd-100" (click)="saveAllData()">
                             <i class="arrow save icon"></i>
                             บันทึก
                         </a>
-                        <a class="ui mini primary button widtd-100" routerLink='/int01/2/3'>
+                        <a class="ui mini primary button widtd-100" (click)="nextPage()">
                             <i class="file alternate icon"></i>
                             รายงานใบอนุญาต
                         </a>
