--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-2/int01-2-3/int01-2-3.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-2/int01-2-3/int01-2-3.component.html
@@ -1,3 +1,5 @@
+<br>
+<app-breadcrumb [route]="breadcrumb"></app-breadcrumb>
 <div class="ui grid">
   <div class="sixteen wide column">
 
@@ -16,9 +18,8 @@
             <th>ลำดับที่</th>
             <th>ประเภทใบอนุญาต</th>
             <th>แบบพิมพ์</th>
-            <th>รหัส</th>
-            <th>ราคา</th>
-            <!-- <th>จำนวนใบอนุญาต</th> -->
+
+            <th>จำนวนใบอนุญาต</th>
             <th>จำนวนเงิน</th>
           </tr>
         </thead>
@@ -52,9 +53,8 @@
             <th>ลำดับที่</th>
             <th>ประเภทใบอนุญาต</th>
             <th>แบบพิมพ์</th>
-            <th>รหัส</th>
-            <th>ราคา</th>
-            <!-- <th>จำนวนใบอนุญาต</th> -->
+
+            <th>จำนวนใบอนุญาต</th>
             <th>จำนวนเงิน</th>
           </tr>
         </thead>
@@ -88,9 +88,8 @@
             <th>ลำดับที่</th>
             <th>ประเภทใบอนุญาต</th>
             <th>แบบพิมพ์</th>
-            <th>รหัส</th>
-            <th>ราคา</th>
-            <!-- <th>จำนวนใบอนุญาต</th> -->
+
+            <th>จำนวนใบอนุญาต</th>
             <th>จำนวนเงิน</th>
           </tr>
         </thead>
