--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/add-external-data/add-external-data.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/add-external-data/add-external-data.component.html
@@ -128,6 +128,7 @@
                                 <tr style="text-align: center !important">
                                     <th rowspan="2">ลำดับ</th>
                                     <th rowspan="2">ทะเบียนสรรพสามิต เดิม/ใหม่</th>
+                                    <th rowspan="2" style="text-align: center !important">เลขทะเบียนสรรพสามิตกเก่า</th>
                                     <th rowspan="2">ชื่อผู้ประกอบการ</th>
                                     <th rowspan="2">ชื่อโรงอุตสาหกรรม/สถานบริการ</th>
                                     <th rowspan="2">ภาค</th>
@@ -139,7 +140,7 @@
                                     
                                     <th rowspan="2">พิกัด</th>
                                     <th rowspan="2">ที่อยู่โรงอุตสาหกรรม/สถานบริการ</th>
-                                    <th rowspan="2">ทุนจดทะเบียน</th>
+                                    <th rowspan="2">สถานะล่าสุด</th>
                                     <th rowspan="2">สถานะ/วันที่</th>
                                     <th colspan="12">การชำระภาษี {{ month/2 }} เดือนแรก</th>
                                     <th colspan="12">การชำระภาษี {{ month/2 }} เดือนหลัง </th>
