--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/analyst-basic-data-trader/analyst-basic-data-trader.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/analyst-basic-data-trader/analyst-basic-data-trader.component.html
@@ -219,8 +219,8 @@
                             <table id="userManagementDt" class="ui small celled table aligned hover nowrap" style="width: 150%">
                                 <thead id="trDrinamic">
                                     <tr>
-                                        <th rowspan="2" style="text-align: center !important">ทะเบียนสรรพสามิต
-                                            เดิม/ใหม่</th>
+                                        <th rowspan="2" style="text-align: center !important">ทะเบียนสรรพสามิตเดิม/ใหม่</th> 
+                                        <th rowspan="2" style="text-align: center !important">เลขทะเบียนสรรพสามิตกเก่า</th>
                                         <th rowspan="2" style="text-align: center !important">ชื่อผู้ประกอบการ</th>
                                         <th rowspan="2" style="text-align: center !important">ชื่อโรงอุตสาหกรรม/สถานบริการ</th>
                                         <th rowspan="2" style="text-align: center !important">ภาค</th>
