--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/working-paper-1-trader/working-paper-1-trader.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/working-paper-1-trader/working-paper-1-trader.component.html
@@ -131,6 +131,7 @@
                             <thead id="trDrinamic">
                                 <tr>
                                     <th rowspan="2" style="text-align: center !important">ทะเบียนสรรพสามิต เดิม/ใหม่</th>
+                                    <th rowspan="2" style="text-align: center !important">เลขทะเบียนสรรพสามิตกเก่า</th>
                                     <th rowspan="2" style="text-align: center !important">ชื่อผู้ประกอบการ</th>
                                     <th rowspan="2" style="text-align: center !important">ชื่อโรงอุตสาหกรรม/สถานบริการ</th>
                                     <th rowspan="2" style="text-align: center !important">ภาค</th>
