--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/add-external-data/add-external-data.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/add-external-data/add-external-data.component.html
@@ -135,6 +135,7 @@
                                     <th rowspan="2">พื้นที่</th>
                                     <th colspan="2">การชำระภาษีในสภาวะปกติ (บาท)</th>
                                     <th rowspan="2">เปลี่ยนแปลง (ร้อยละ)</th>
+                                    <th rowspan="2" style="text-align: center !important">เปอร์เซ็นส่วนเบี่ยงเบน</th>
                                     <th rowspan="2">ชำระภาษี(เดือน)</th>
                                     <th colspan="3">การตรวจสอบภาษีย้อนหลัง 3 ปีงบประมาณ</th>
                                     
