สร้างกระดาษทำรายการ งานพี่ต้อ

--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/analyst-basic-data-trader/analyst-basic-data-trader.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/analyst-basic-data-trader/analyst-basic-data-trader.component.html
@@ -1,3 +1,5 @@
+
+<app-breadcrumb [route]="breadcrumb"></app-breadcrumb>
 <ui-modal [id]="'modal-condition'" [type]="'custom'" [size]="'large'">
     <i class="close icon"></i>
     <div class="header">
