--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/create-trader/create-trader.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/create-trader/create-trader.component.html
@@ -1,3 +1,5 @@
+
+<app-breadcrumb [route]="breadcrumb"></app-breadcrumb>
 <form class="ui grid" (submit)="onSubmit($event)" ngNativeValidate>
     <div class="sixteen wide column">
         <h2 class="ui header">สร้างกระดาษทำการคัดเลือกราย</h2>
