--- a/workspace/ims-client/src/app/buckwaframework/project/check-operation/cop06/cop06.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/check-operation/cop06/cop06.component.html
@@ -71,7 +71,7 @@
                                                   <i class="file text outline icon"></i>
                                                   <div class="content">
                                                       <div class="header">
-                                                          <a href="javascript:;" routerLink="/ope04/9">รายงานการตรวจปฏิบัติการจ่ายสินค้าสำเร็จรูปต่างประเทศ</a>
+                                                          <a href="javascript:;" routerLink="/cop06/5">รายงานการตรวจปฏิบัติการจ่ายสินค้าสำเร็จรูปต่างประเทศ</a>
                                                       </div>
                                                   </div>
                                               </div>
@@ -233,7 +233,7 @@
                                   2
                               </td>
                               <td>
-                                  <a href="javascript:;" routerLink="/ope04/5"> กระดาษทำการจ่ายสินค้าสำเร็จรูป </a>
+                                  <a href="javascript:;" routerLink="/cop06/3/1"> กระดาษทำการจ่ายสินค้าสำเร็จรูป </a>
                               </td>
                           </tr>
                       </tbody>
@@ -252,7 +252,7 @@
                                   1
                               </td>
                               <td>
-                                  <a href="javascript:;" routerLink="/ope04/6"> กระดาษทำการตรวจสอบรายการวัตถุดิบที่ขอลดหย่อนภาษีที่ยื่นต่อกรมสรรพสามิต (ภส.05 - 02) </a>
+                                  <a href="javascript:;" routerLink="/cop06/4"> กระดาษทำการตรวจสอบรายการวัตถุดิบที่ขอลดหย่อนภาษีที่ยื่นต่อกรมสรรพสามิต (ภส.05 - 02) </a>
                               </td>
                           </tr>
                          
