--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-1/int09-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-1/int09-1.component.html
@@ -78,7 +78,7 @@
         <div class="inline fields">
             <div class="two wide field"></div>
             <div class="two wide field">
-                <label>วันที่เดินทาง</label>
+                <label>วันที่เดินทางไป</label>
             </div>     
             <div class="four wide field">
                 <div class="ui calendar" id="date4" style="width: 100%;">
@@ -89,7 +89,7 @@
                 </div>
             </div>
             <div class="two wide field">
-                <label>วันที่ถึง</label>
+                <label>วันที่เดินทางกลับ</label>
             </div>
             <div class="four wide field">
                 <div class="ui calendar" id="date5" style="width: 100%;">
@@ -166,8 +166,8 @@
                 <th style="text-align: center !important;">ผู้สร้าง</th>
                 <th style="text-align: center !important;">ประเภทการเบิก</th>
                 <th style="text-align: center !important;">ปีงบประมาณ</th>
-                <th style="text-align: center !important;">วันที่เดินทาง</th>
-                <th style="text-align: center !important;">ถึงวันที่</th>
+                <th style="text-align: center !important;">วันที่เดินทางไป</th>
+                <th style="text-align: center !important;">วันที่เดินทางกลับ</th>
                 <th style="text-align: center !important;">เดินทางไป</th>
                 <th style="text-align: center !important;">สถานะการดำเนินการ</th>
                 <th style="text-align: center !important;width:180px !important">จัดการ</th>
@@ -214,7 +214,7 @@
             <div class="inline fields">
                 <div class="two wide field"></div>
                 <div class="two wide field">
-                    <label>วันที่เดินทาง</label>
+                    <label>วันที่เดินทางไป</label>
                 </div>
                 <div class="four wide field">
                     <div class="ui calendar" id="modalDate2" style="width: 100%;">
@@ -225,7 +225,7 @@
                     </div>
                 </div>
                 <div class="two wide field">
-                    <label>วันที่ถึง</label>
+                    <label>วันที่เดินทางกลับ</label>
                 </div>
                 <div class="four wide field">
                     <div class="ui calendar" id="modalDate3" style="width: 100%;">
